<resources>
    <string name="app_name">Inventory Shop</string>
    <!--Editor activity action-save -->
    <string name="action_save">save</string>
    <!--Editor activity action-Delete -->
    <string name="action_delete">delete</string>
    <string name="action_increase">increase</string>
    <string name="action_decrease">decrease</string>
    <string name="category_overview">category overview</string>
    <string name="item_name">item name</string>
    <!--item_quantity-->
    <string name="item_quantity">current quantity</string>
    <!---supplier-->
    <string name="supplier">supplier</string>
    <!--select img for the item-->
    <string name="select_img">select Image</string>
    <!--price of the item-->
    <string name="price">price</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <!--label of the EditorActivity when enter new item-->
    <string name="new_item">add item</string>
    <!--label of the EditorActivity when editing exist item-->
    <string name="edit_item">Edit item</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding item</string>
    <!--success message when inter new item from EditorActivity-->
    <string name="Editor_success">item saved</string>
    <!--fail message when inter new item from EditorActivity-->
    <string name="Editor_fail">item  not saved</string>
    <!--Editor_update_fail-->
    <string name="Editor_update_fail">Update fail</string>
    <!--Editor_update_success-->
    <string name="Editor_update_success">successful update</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
     <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

     <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
     <string name="discard">Discard</string>
     <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
     <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
        <string name="editor_delete_item_successful">item deleted</string>

       <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
        <string name="editor_delete_item_failed">Error with deleting item</string>

       <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
        <string name="delete_dialog_msg">Delete this item?</string>

       <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
        <string name="delete">Delete</string>

       <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
        <string name="cancel">Cancel</string>
    <!--supplier Emai-->
    <string name="supplier_email">Supplier@gmail.com</string>
    <!--select picture-->
   <string name="select_picture">select picture</string>
    <!--compose button-->
    <string name="compose_button">compose "  "</string>
    <!--Email validation for asking supplier for more of the item-->
    <string name="Email_validation">Email can \'t be empty</string>
    <string name="Extra_validation">Extra item number can \'t be empty</string>

</resources>
