<?xml version="1.0" encoding="utf-8"?><!--Layout for the editor activity-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <!--overview category-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Editor_label"
            android:text="@string/category_overview"

            />
        <!--input fields-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">
            <!--name field-->
            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/item_name"
                android:padding="16dp"
                android:textAppearance="?android:textAppearanceSmall"

                />
                <!--price-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/Editor_label"
            android:text="price"

            />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/price"
            android:inputType="number"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceSmall"

            />
    </LinearLayout>

            <EditText
                android:id="@+id/item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/item_quantity"
                android:inputType="number"
                android:padding="16dp"
                android:textAppearance="?android:textAppearanceSmall"

                />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--quantity increase or decrease-->
        <TextView
            style="@style/Editor_label"
            android:text="quantity"

            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="+" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="-" />

    </LinearLayout>

    <!--supplier-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Editor_label"
            android:text="@string/supplier" />

        <EditText
            android:id="@+id/item_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/supplier"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/supplier_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_emai"
            />
    </LinearLayout>


    <!--item image button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/editor_item_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_img"
            android:textAppearance="?android:textAppearanceSmall"
            />
    </LinearLayout>
  <!--item image-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/editor_item_image_view"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_height="100dp"

            />
    </LinearLayout>

</LinearLayout>
    </ScrollView>
